# AirflowCronAPI

./: .env.sample  config.py  dbNotebook.py  dockerfile  main.py  pyproject.toml  readme.md
dags/: cronTrigger.py
sql_module/: crud.py  database.py  models.py  schemas.py
